@@ -1,6 +1,6 @@
 fieldID,fieldName,fieldType,defaultValue,fieldDescription,minValue,maxValue
 customStarSystemHeader,Custom Star Systems Header,Header,Custom Star Systems,,,
-enableCustomStarSystems,Enable Custom Star Systems,Boolean,true,"Generates custom star systems during new game creation. [Disabling this will disable all custom star systems, including the default star system occupied by the Adversary faction.] Edit the ""customStarSystems"" entry in the settings.json of the Adversary mod folder if you wish to disable individual custom star systems instead.",,
+enableCustomStarSystems,Enable Custom Star Systems,Boolean,true,"Generates custom star systems during new game creation. [Disabling this will disable all custom star systems, including the default star system occupied by the Adversary faction.] Edit [customStarSystems.json], located in the Adversary mod folder, if you wish to disable individual custom star systems instead.",,
 ,,,,,,
 doctrineChangerHeader,Doctrine Changer Header,Header,Doctrine Changer,,,
 enableAdversaryDoctrineChange,Enable Adversary Doctrine Change,Boolean,true,"Enables the Adversary to switch fleet composition and doctrines mid-game. The list of possible doctrines can be found and modified via ""adversaryPossibleDoctrines"" in settings.json.",,
