@@ -1,0 +1,240 @@
+#-------------------------------------------------------------------------------------#
+# Open referenceSettings.json for a reference guide on making a custom star system    #
+# (It also includes some tips and warnings about making your own custom star systems) #
+# Open presetStarSystems.json for some preset custom systems to copy, paste, and edit #
+#-------------------------------------------------------------------------------------#
+
+# This JSON file is reloaded during new game creation.
+# Thus, it can be edited without needing to restart your Starsector application.
+# Any changes here will apply on the next new game creation.
+
+{	# List of custom star systems to generate
+	"customStarSystems":[
+		{ # Optimal Star System
+			"isEnabled":true, # Change to false if you don't want this system to spawn
+			"isCoreWorldSystem":true,
+			"hasSystemwideNebula":false,
+			"addCoronalHypershunt":true,
+			"addDomainCryosleeper":true,
+			"setLocation":1, # 1st closest constellation to Core Worlds
+			"systemBackground":"background6.jpg",
+			"systemMusic":"music_diktat_market_hostile",
+			"fringeJumpPoint":{"orbitRadius":8410},
+			"starsInSystemCenter":{
+				"stars":[
+					{	"name":"Optimal",
+						"type":"star_blue_giant",
+						"radius":1100,
+						"coronaRadius":1100,
+						"flareChance":0.0,
+					},
+					{	"name":"Zenith",
+						"type":"star_yellow",
+						"radius":800,
+						"coronaRadius":800,
+						"flareChance":0.0,
+					},
+					{	"name":"Pinnacle",
+						"type":"star_orange",
+						"radius":650,
+						"coronaRadius":650,
+						"flareChance":0.0,
+					},
+				],
+				"orbitRadius":1850,
+			},
+			"orbitingBodies":[
+				{	"type":"gas_giant",
+					"orbitRadius":5170,
+					"radius":250,
+					"conditions":[
+						"volatiles_plentiful",
+						"high_gravity",
+						"hot",
+					],
+					"entitiesAtStablePoints":[
+						{"type":"comm_relay","name":"Optimal Relay","factionId":"adversary"},
+						{"type":"inactive_gate","name":"Optimal Gate"},
+						{"type":"jump_point","name":"Inner System Jump-point"},
+					],
+					"marketSize":6,
+					"factionId":"adversary",
+					"aiCoreAdmin":true,
+					"industries":[
+						["population","gamma_core","orbital_fusion_lamp",false],
+						["megaport","alpha_core",,true],
+						["waystation","gamma_core",,false],
+						["heavybatteries","alpha_core",,false],
+						["highcommand","alpha_core","cryoarithmetic_engine",true],
+						["starfortress","alpha_core",,false],
+						["mining","gamma_core","plasma_dynamo",false],
+						["orbitalworks","alpha_core","corrupted_nanoforge",false],
+						["lightindustry","gamma_core",,false],
+					],
+				},
+				{	"type":"toxic",
+					"orbitRadius":625,
+					"focus":1,
+					"radius":75,
+					"conditions":[
+						"rare_ore_ultrarich",
+						"ore_ultrarich",
+						"volatiles_plentiful",
+						"organics_plentiful",
+						"toxic_atmosphere",
+						"tectonic_activity",
+					],
+					"marketSize":6,
+					"factionId":"adversary",
+					"aiCoreAdmin":true,
+					"industries":[
+						["population","gamma_core",,false],
+						["megaport","alpha_core","fullerene_spool",false],
+						["waystation","gamma_core",,false],
+						["heavybatteries","gamma_core",,false],
+						["highcommand","alpha_core",,false],
+						["starfortress_mid","alpha_core",,false],
+						["mining","gamma_core","mantle_bore",false],
+						["refining","gamma_core",,false],
+						["lightindustry","gamma_core",,false],
+					],
+				},
+				{	"type":"barren-bombarded",
+					"orbitRadius":1060,
+					"focus":1,
+					"radius":60,
+					"conditions":[
+						"rare_ore_moderate",
+						"ore_ultrarich",
+						"volatiles_trace",
+						"no_atmosphere"
+					],
+					"marketSize":6,
+					"factionId":"adversary",
+					"aiCoreAdmin":true,
+					"industries":[
+						["population","alpha_core",,false],
+						["megaport","alpha_core","fullerene_spool",false],
+						["waystation","gamma_core",,false],
+						["heavybatteries","alpha_core","drone_replicator",false],
+						["planetaryshield","alpha_core",,false],
+						["highcommand","alpha_core",,false],
+						["starfortress_high","alpha_core",,false],
+						["orbitalworks","alpha_core","pristine_nanoforge",false],
+						["refining","gamma_core","catalytic_core",false],
+						["fuelprod","gamma_core","synchrotron",false],
+					],
+				},
+				{	"type":"terran",
+					"orbitRadius":6770,
+					"radius":130,
+					"conditions":[
+						"ruins_vast",
+						"farmland_bountiful",
+						"ore_ultrarich",
+						"organics_plentiful",
+						"mild_climate",
+						"habitable",
+						"solar_array",
+					],
+					"entitiesAtStablePoints":[
+						,
+						{"type":"nav_buoy","name":"Optimal Navigation Buoy","factionId":"adversary"},
+						{"type":"sensor_array","name":"Optimal Listening Station","factionId":"adversary"},
+					],
+					"marketSize":6,
+					"factionId":"adversary",
+					"aiCoreAdmin":true,
+					"industries":[
+						["population","gamma_core",,true],
+						["megaport","alpha_core","fullerene_spool",false],
+						["waystation","gamma_core",,false],
+						["heavybatteries","alpha_core","drone_replicator",false],
+						["highcommand","alpha_core",,false],
+						["starfortress","alpha_core",,true],
+						["farming","gamma_core","soil_nanites",false],
+						["lightindustry","gamma_core","biofactory_embryo",false],
+						["commerce","alpha_core","dealmaker_holosuite",false],
+					],
+				},
+				{	"type":"water",
+					"orbitRadius":7380,
+					"radius":130,
+					"conditions":[
+						"water_surface",
+						"mild_climate",
+						"habitable",
+						"ore_ultrarich",
+						"rare_ore_moderate",
+						"volatiles_diffuse",
+						"organics_plentiful",
+						"pollution",
+						"ruins_widespread",
+					],
+				},
+			],
+			"systemFeatures":[
+				{	"type":"asteroid_belt",
+					"orbitRadius":7960,
+					"name":"Ring of Despair",
+					"innerBandIndex":1,
+					"outerBandIndex":3,
+				},
+				{	"type":"rings_ice",
+					"orbitRadius":300,
+					"focus":5,
+					"name":"Hope's Aura",
+					"bandIndex":3,
+				},
+				# An abandoned mining station in the asteroid belt
+				#{"type":"station","orbitRadius":8010,"name":"Abandoned Mining Station","stationType":"station_mining00"},
+			],
+		},
+
+		{ # An uninhabited star system with planets similar to the default Optimal system
+			"isEnabled":true,
+			"numberOfSystems":1,
+			"setLocation":0, # Location set to a random constellation
+			"hasSystemwideNebula":true,
+			"addCoronalHypershunt":false,
+			"addDomainCryosleeper":false,
+			"systemBackground":"background5.jpg",
+			"fringeJumpPoint":{"orbitRadius":6840},
+			"starsInSystemCenter":{"stars":[{"type":"random_star_giant"}]},
+			"orbitingBodies":[
+				{	"type":"gas_giant",
+					"orbitRadius":3825,
+					"radius":325,
+					"conditions":["volatiles_abundant","high_gravity","hot"],
+					"entitiesAtStablePoints":[{"type":"comm_relay"},{"type":"stable_location"},{"type":"stable_location"}],
+				},
+				{	"type":"terran",
+					"orbitRadius":4625,
+					"radius":175,
+					"conditions":["ruins_extensive","farmland_adequate","ore_moderate","organics_common","habitable"],
+				},
+				{	"type":"toxic",
+					"orbitRadius":5850,
+					"radius":150,
+					"conditions":["toxic_atmosphere","ore_rich","rare_ore_moderate","organics_common","volatiles_diffuse"],
+				},
+				{	"type":"barren",
+					"orbitRadius":6420,
+					"radius":120,
+					"conditions":["no_atmosphere","ore_sparse","rare_ore_sparse"],
+				},
+			],
+			"systemFeatures":[
+				{"type":"jump_point","orbitRadius":3200,"name":"Inner System Jump-point"},
+				{"type":"inactive_gate","orbitRadius":5250},
+				{"type":"magnetic_field","orbitRadius":325,"focus":1,"size":200},
+				{"type":"station_research","orbitRadius":425,"focus":1},
+			],
+		},
+
+		# Can add more star systems here using the above format
+
+
+
+	],
+}
