@@ -3,7 +3,7 @@
   "name":"Adversary",
   "author":"Tranquility",
   "version":{"major":3,"minor":4,"patch":0},
-  "description":"Adds an isolated, player-like faction, situated in a heavily-fortified star system. Also adds the ability to add custom star systems via this mod's settings.json.",
+  "description":"Adds an isolated, player-like faction, situated in a heavily-fortified star system. Also adds the ability to add custom star systems through a JSON config file.",
   "gameVersion":"0.95.1a-RC6",
   "jars":["jars/Adversary.jar"],
   "modPlugin":"data.scripts.AdversaryModPlugin"
